feat: support external WAS deployment and persist dashboard UI settings
- Downgrade toolchain to JDK 17 for compatibility with target WAS (JEUS 9.1)
- Version scheme: 1.0.0 with build timestamp suffix (replaces -SNAPSHOT)
- ProfilingFilter.shouldNotFilter now uses getServletPath() so it works
  correctly under any deployment context path (e.g. /springsample)
- ActiveThreadTracker: replace Thread.threadId() with getId() for JDK 17
- Rename dashboard static/index.html → apm.html to avoid collision with
  host application's own index.html under a shared context path
- Convert dashboard fetch() calls to relative paths so it works behind
  any context path
- Persist dashboard UI state (yMax, paused, active filters) in
  localStorage so user preferences survive page reloads
- Mark gradlew as executable

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>